--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'California -- Fiction'
+- GITenberg
 title: Eve to the Rescue
 url: http://www.gutenberg.org/ebooks/25892
